feat: continue refactor